--- a/packages/alarm/alarm_control_panel/armed_zone_away.yaml
+++ b/packages/alarm/alarm_control_panel/armed_zone_away.yaml
@@ -2,7 +2,7 @@ template:
   - select:
       - name: "Aggiungi o rimuvi zone allarme globale"
         state: "{{ '' }}"
-        options: "{{ ['RESET'] + state_attr('sensor.lista_zone_alarm_setting', 'print_list_group')|list }}"
+        options: "{{ ['RESET'] + state_attr('sensor.lista_zone_alarm_setting', 'print_list_group') | list }}"
         select_option:
           - event: customizations
             event_data:
@@ -24,13 +24,13 @@ template:
         state: "{{ trigger.event.data.sensor_select }}"
         attributes:
           print_list_group: >-
-            {% set option = trigger.event.data.sensor_select|string %}
+            {% set option = trigger.event.data.sensor_select | string %}
             {% set lists = this.attributes.print_list_group %}
             {% if option == 'RESET' %}
             {% elif option in lists %}
-              {{ lists|list|select('ne', option)|list }}
+              {{ lists | list | select('ne', option) | list }}
             {% else %}
-              {{ lists|list + [option] }}
+              {{ lists | list + [option] }}
             {% endif %}
 
   - sensor:
@@ -53,18 +53,18 @@ template:
       - platform: template
         value_template: >
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
           {{ is_state(alarm, 'armed_away') and is_state('input_boolean.alarm_triggered_state', 'off') }}
     sensor:
       - name: Lista sensori allarme zone attiv away
         state: >-
-          {% set window = expand(state_attr('sensor.lista_sensori_allarme_zone_away' , 'print_list_group'))|selectattr('attributes.device_class','defined')|selectattr('attributes.device_class','eq','window')|selectattr('state','eq','off')|map(attribute='entity_id')|list%}
-          {% set not_window = expand(state_attr('sensor.lista_sensori_allarme_zone_away' , 'print_list_group'))|selectattr('attributes.device_class','defined')|rejectattr('attributes.device_class','eq','window')|map(attribute='entity_id')|list %}
-            {{ (window + not_window)|count}}
+          {% set window = expand(state_attr('sensor.lista_sensori_allarme_zone_away' , 'print_list_group')) | selectattr('attributes.device_class', 'defined') | selectattr('attributes.device_class', 'eq', 'window') | selectattr('state', 'eq', 'off') | map(attribute='entity_id') | list%}
+          {% set not_window = expand(state_attr('sensor.lista_sensori_allarme_zone_away' , 'print_list_group')) | selectattr('attributes.device_class', 'defined') | rejectattr('attributes.device_class', 'eq', 'window') | map(attribute='entity_id') | list %}
+            {{ (window + not_window) | count}}
         attributes:
           print_list_group: >
-            {% set window = expand(state_attr('sensor.lista_sensori_allarme_zone_away' , 'print_list_group'))|selectattr('attributes.device_class','defined')|selectattr('attributes.device_class','eq','window')|selectattr('state','eq','off')|map(attribute='entity_id')|list%}
-            {% set not_window = expand(state_attr('sensor.lista_sensori_allarme_zone_away' , 'print_list_group'))|selectattr('attributes.device_class','defined')|rejectattr('attributes.device_class','eq','window')|map(attribute='entity_id')|list %}
+            {% set window = expand(state_attr('sensor.lista_sensori_allarme_zone_away' , 'print_list_group')) | selectattr('attributes.device_class', 'defined') | selectattr('attributes.device_class', 'eq', 'window') | selectattr('state', 'eq', 'off') | map(attribute='entity_id') | list%}
+            {% set not_window = expand(state_attr('sensor.lista_sensori_allarme_zone_away' , 'print_list_group')) | selectattr('attributes.device_class', 'defined') | rejectattr('attributes.device_class', 'eq', 'window') | map(attribute='entity_id') | list %}
               {{ (window + not_window)}}
 
   - select:
@@ -73,7 +73,7 @@ template:
         options: >-
           {% set output = namespace(numbers=[]) %}
           {% set list_sensor = expand(state_attr('sensor.lista_sensori_allarme_zone_away', 'print_list_group')) %}
-            {% for states in list_sensor  if states.state != 'unavailable' and states.state != 'unknown' -%}
+            {% for states in list_sensor if states.state != 'unavailable' and states.state != 'unknown' -%}
                 {%- set output.numbers = output.numbers + [states.name ] -%} {%- if loop.last -%} {%- endif -%}
             {%- endfor %}
             {{['RESET'] + output.numbers}}
@@ -91,8 +91,8 @@ template:
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
-            {{ is_state(alarm,'disarmed') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+            {{ is_state(alarm, 'disarmed') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     sensor:
       - name: Sensori rimossi solo per il prossimo allarme zone away
         state: "{{ trigger.event.data.sensor_select }}"
@@ -112,23 +112,23 @@ automation:
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
-            {{ is_state(alarm,'arming') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+            {{ is_state(alarm, 'arming') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
-          {{ is_state(alarm,'triggered') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+          {{ is_state(alarm, 'triggered') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
-          {{ is_state(alarm,'disarmed') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+          {{ is_state(alarm, 'disarmed') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
-          {{ is_state(alarm,'armed_away') and now() < states[alarm].last_changed+ timedelta(seconds=1) }}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+          {{ is_state(alarm, 'armed_away') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     condition:
       - "{{ is_state('input_select.setting_zone_entity', 'Zone') }}"
     action:
@@ -149,8 +149,8 @@ automation:
                   tag: state_alarm
                   action2: None
                   message: >-
-                    {% set entities= expand(state_attr('sensor.lista_sensori_allarme_zone_away', 'print_list_group'))|selectattr('attributes.device_class', 'defined')|selectattr('attributes.device_class', 'eq', 'window')|selectattr('state', 'eq', 'on')|map(attribute='name')|list %}
-                    {% if entities|length != 0 %}
+                    {% set entities= expand(state_attr('sensor.lista_sensori_allarme_zone_away', 'print_list_group')) | selectattr('attributes.device_class', 'defined') | selectattr('attributes.device_class', 'eq', 'window') | selectattr('state', 'eq', 'on') | map(attribute='name') | list %}
+                    {% if entities | length != 0 %}
                       {% for element in entities %}
                         {%- if loop.first %}Allarme attivo tra 40 secondi. Escluso sensore: {% else %}, {% endif -%}
                           {{- element -}}
@@ -194,8 +194,8 @@ automation:
                   types: notify_alarm
                   notify: allarme_globale_scattato_media_player
                   volume: 1
-                  message: Attenzione. Allarme collegato alla centrale operativa. Pattuglia in arrivo!
-
+                  message: sirena
+                  mp3: true
           - alias: Allarme disattivato
             conditions:
               - "{{ trigger.to_state.state == 'disarmed' }}"
@@ -237,14 +237,14 @@ automation:
       - "{{ trigger.event.data.new_state.state == 'on' and trigger.event.data.old_state.state == 'off' }}"
       - >-
         {% from 'alarm.jinja' import state_alarm %}
-        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {% set alarm = (state_alarm() | from_json) ['alarm'] %}
         {{ states[alarm].state == 'armed_away' }}
     action:
       - service: alarm_control_panel.alarm_trigger
         target:
           entity_id: >-
             {% from 'alarm.jinja' import state_alarm %}
-            {{ (state_alarm()|from_json)['alarm'] }}
+            {{ (state_alarm() | from_json) ['alarm'] }}
       - alias: INVIA NOTIFICA
         event: customizations
         event_data:
