--- a/packages/alarm/alarm_control_panel/general_alarm.yaml
+++ b/packages/alarm/alarm_control_panel/general_alarm.yaml
@@ -6,7 +6,7 @@ alarm_control_panel:
     trigger_time: 120
     code_template: >
       {% from 'alarm.jinja' import state_alarm %}
-      {{ (state_alarm()|from_json)['code'] }}
+      {{ (state_alarm() | from_json) ['code'] }}
     code_arm_required: false
 
 group:
@@ -14,9 +14,9 @@ group:
     name: Entità da escludere per pkg allarme
     entities:
       - binary_sensor.frigorifero_door_open
-      - binary_sensor.bedprecence_mattia
-      - binary_sensor.bedprecence_marco
-      - binary_sensor.bedprecence_serena
+      # - binary_sensor.bedprecence_mattia
+      # - binary_sensor.bedprecence_marco
+      # - binary_sensor.bedprecence_serena
       - sensor.miflora_signal_strength
       - light.luce_ingresso
       - cover.tenda_tavolo
@@ -46,7 +46,7 @@ template:
       - name: Stato allarme
         state: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}    
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}    
           {{ 
             { 
               'armed_away' : 'Allarme Globale',
@@ -65,8 +65,8 @@ template:
           - event: customizations
             event_data:
               types: setting_name_zone_alarm
-              zone_select: "{{ states('input_text.setting_name_zone_alarm')|title }}"
-          - if: "{{ states('input_text.setting_name_zone_alarm')|title == 'Reset'}}"
+              zone_select: "{{ states('input_text.setting_name_zone_alarm') | title }}"
+          - if: "{{ states('input_text.setting_name_zone_alarm') | title == 'Reset'}}"
             then:
               - service: select.select_option
                 data:
@@ -87,18 +87,18 @@ template:
         state: "{{ trigger.event.data.zone_select }}"
         attributes:
           print_list_group: >-
-            {% set option = trigger.event.data.zone_select|string %}
+            {% set option = trigger.event.data.zone_select | string %}
             {% set lists = this.attributes.print_list_group %}
             {% if option == 'Reset' %}
-            {% elif option|length > 0 and not option in lists %}
-              {{ lists|list + [option] }}
+            {% elif option | length > 0 and not option in lists %}
+              {{ lists | list + [option] }}
             {% else %}
               {{ lists }}
             {% endif %}
 
   - select:
       - name: "Seleziona zona allarme setting"
-        state: "{{ states('input_text.select_zone_alarm')|title }}"
+        state: "{{ states('input_text.select_zone_alarm') | title }}"
         options: "{{ state_attr('sensor.lista_zone_alarm_setting', 'print_list_group')}}"
         select_option:
           - service: input_text.set_value
@@ -128,52 +128,52 @@ template:
       - name: Lista sensori allarme per zone
         state: "{{ 'test' }}"
         attributes:
-          zona0: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[0]}}"
+          zona0: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [0] }}"
           sensor_zona0: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona0, trigger.event.data.sensor_select, 0) }}
 
-          zona1: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[1]}}"
+          zona1: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [1] }}"
           sensor_zona1: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona1, trigger.event.data.sensor_select, 1) }}
 
-          zona2: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[2]}}"
+          zona2: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [2] }}"
           sensor_zona2: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona2, trigger.event.data.sensor_select, 2) }}
 
-          zona3: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[3]}}"
+          zona3: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [3] }}"
           sensor_zona3: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona3, trigger.event.data.sensor_select, 3) }}
 
-          zona4: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[4]}}"
+          zona4: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [4] }}"
           sensor_zona4: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona4, trigger.event.data.sensor_select, 4) }}
 
-          zona5: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[5]}}"
+          zona5: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [5] }}"
           sensor_zona5: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona5, trigger.event.data.sensor_select, 5) }}
 
-          zona6: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[6]}}"
+          zona6: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [6] }}"
           sensor_zona6: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona6, trigger.event.data.sensor_select, 6) }}
 
-          zona7: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[7]}}"
+          zona7: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [7] }}"
           sensor_zona7: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona7, trigger.event.data.sensor_select, 7) }}
 
-          zona8: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[8]}}"
+          zona8: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [8] }}"
           sensor_zona8: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona8, trigger.event.data.sensor_select, 8) }}
 
-          zona9: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options')[9]}}"
+          zona9: "{{ state_attr('select.seleziona_zona_allarme_setting', 'options') [9] }}"
           sensor_zona9: >-
             {% from 'alarm.jinja' import zone_alarm %}
             {{ zone_alarm(this.attributes.sensor_zona9, trigger.event.data.sensor_select, 9) }}
@@ -192,12 +192,12 @@ automation:
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
           {{ is_state(alarm, 'triggered') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
           {{ is_state(alarm, 'disarmed') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     action:
       - if: "{{ trigger.to_state.state == 'triggered' }}"
