--- a/packages/alarm/skill_device/detached/detached_shelly.yaml
+++ b/packages/alarm/skill_device/detached/detached_shelly.yaml
@@ -7,7 +7,7 @@ sensor:
     name: rest_btn_type
     resource_template: "{{state_attr('sensor.detached_list', 'btn_type') [states('input_number.rest_btn_index') | int(0) | default(0)] | default(none)}}"
     method: GET
-    value_template: "{{state_attr('sensor.detached_list', 'detached_on') [states('input_number.rest_btn_index') | int(0)] | default(ok) | replace('detached', '')}}"
+    value_template: "{{state_attr('sensor.detached_list', 'detached_on') [states('input_number.rest_btn_index') | int(0)] | default(ok) }}"
     json_attributes:
       - btn_type
       - button_type
@@ -49,7 +49,7 @@ template:
               {% set ns.url_white = ns.url_white + [device_attr(device, 'configuration_url') + '/settings/white/0?btn_type=detached'] %}
               {% set ns.url_color = ns.url_color + [device_attr(device, 'configuration_url') + '/settings/color/0?btn_type=detached'] %}
             {% endfor %}
-            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Dimmer')or is_device_attr(device, 'model', 'Shelly Dimmer 2') %}
+            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Dimmer') or is_device_attr(device, 'model', 'Shelly Dimmer 2') %}
               {% set ns.url_light0 = ns.url_light0 + [device_attr(device, 'configuration_url') + ('/settings/light/0?btn_type=detached') ] %}
             {% endfor %}
             {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly 1L') %}
@@ -65,10 +65,10 @@ template:
             {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') %}
               {% set ns.url_switch2 = ns.url_switch2 + [device_attr(device, 'configuration_url') + ('/rpc/Switch.SetConfig?id=2&config={"in_mode":"detached"}') ] %}
             {% endfor %}
-            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') or is_device_attr(device, 'model', 'Shelly Pro 2PM')or is_device_attr(device, 'model', 'Shelly Pro 2') or is_device_attr(device, 'model', 'Shelly Plus 2PM') %}
+            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') or is_device_attr(device, 'model', 'Shelly Pro 2PM') or is_device_attr(device, 'model', 'Shelly Pro 2') or is_device_attr(device, 'model', 'Shelly Plus 2PM') %}
               {% set ns.url_switch1 = ns.url_switch1 + [device_attr(device, 'configuration_url') + ('/rpc/Switch.SetConfig?id=1&config={"in_mode":"detached"}') ] %}
             {% endfor %}
-            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') or is_device_attr(device, 'model', 'Shelly Pro 2PM')or is_device_attr(device, 'model', 'Shelly Pro 2') or is_device_attr(device, 'model', 'Shelly Plus 2PM') or is_device_attr(device, 'model', 'Shelly Pro 1PM')or is_device_attr(device, 'model', 'Shelly Pro 1')or is_device_attr(device, 'model', 'Shelly Plus 1')or is_device_attr(device, 'model', 'Shelly Plus 1PM') %}
+            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') or is_device_attr(device, 'model', 'Shelly Pro 2PM') or is_device_attr(device, 'model', 'Shelly Pro 2') or is_device_attr(device, 'model', 'Shelly Plus 2PM') or is_device_attr(device, 'model', 'Shelly Pro 1PM') or is_device_attr(device, 'model', 'Shelly Pro 1') or is_device_attr(device, 'model', 'Shelly Plus 1') or is_device_attr(device, 'model', 'Shelly Plus 1PM') %}
               {% set ns.url_switch0 = ns.url_switch0 + [device_attr(device, 'configuration_url') + ('/rpc/Switch.SetConfig?id=0&config={"in_mode":"detached"}') ] %}
             {% endfor %}
             {{ ns.url_switch0 + ns.url_switch1 + ns.url_switch2 + ns.url_switch3 + ns.url_cover + ns.url_roller + ns.btn1_type + ns.btn2_type + ns.url_light0 + ns.url_color + ns.url_white + ns.url_relay0 + ns.url_relay1 + ns.url_relay2 + ns.url_relay3}}
@@ -94,7 +94,7 @@ template:
               {% set ns.url_white = ns.url_white + [device_attr(device, 'configuration_url') + ('/settings/white/0') ] %}
               {% set ns.url_color = ns.url_color + [device_attr(device, 'configuration_url') + ('/settings/color/0') ] %}
             {% endfor %}
-            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Dimmer')or is_device_attr(device, 'model', 'Shelly Dimmer 2') %}
+            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Dimmer') or is_device_attr(device, 'model', 'Shelly Dimmer 2') %}
               {% set ns.url_light0 = ns.url_light0 + [device_attr(device, 'configuration_url') + ('/settings/light/0') ] %}
             {% endfor %}
             {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly 1L') %}
@@ -110,10 +110,10 @@ template:
             {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') %}
               {% set ns.url_switch2 = ns.url_switch2 + [device_attr(device, 'configuration_url') + ('/rpc/Switch.GetConfig?id=2') ] %}
             {% endfor %}
-            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') or is_device_attr(device, 'model', 'Shelly Pro 2PM')or is_device_attr(device, 'model', 'Shelly Pro 2') or is_device_attr(device, 'model', 'Shelly Plus 2PM') %}
+            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') or is_device_attr(device, 'model', 'Shelly Pro 2PM') or is_device_attr(device, 'model', 'Shelly Pro 2') or is_device_attr(device, 'model', 'Shelly Plus 2PM') %}
               {% set ns.url_switch1 = ns.url_switch1 + [device_attr(device, 'configuration_url') + ('/rpc/Switch.GetConfig?id=1') ] %}
             {% endfor %}
-            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') or is_device_attr(device, 'model', 'Shelly Pro 2PM')or is_device_attr(device, 'model', 'Shelly Pro 2') or is_device_attr(device, 'model', 'Shelly Plus 2PM') or is_device_attr(device, 'model', 'Shelly Pro 1PM')or is_device_attr(device, 'model', 'Shelly Pro 1')or is_device_attr(device, 'model', 'Shelly Plus 1')or is_device_attr(device, 'model', 'Shelly Plus 1PM') %}
+            {% for device in entity_relay if is_device_attr(device, 'model', 'Shelly Pro 4PM') or is_device_attr(device, 'model', 'Shelly Pro 3') or is_device_attr(device, 'model', 'Shelly Pro 2PM') or is_device_attr(device, 'model', 'Shelly Pro 2') or is_device_attr(device, 'model', 'Shelly Plus 2PM') or is_device_attr(device, 'model', 'Shelly Pro 1PM') or is_device_attr(device, 'model', 'Shelly Pro 1') or is_device_attr(device, 'model', 'Shelly Plus 1') or is_device_attr(device, 'model', 'Shelly Plus 1PM') %}
               {% set ns.url_switch0 = ns.url_switch0 + [device_attr(device, 'configuration_url') + ('/rpc/Switch.GetConfig?id=0') ] %}
             {% endfor %}
             {{ ns.url_switch0 + ns.url_switch1 + ns.url_switch2 + ns.url_switch3 + ns.url_cover + ns.url_roller + ns.btn1_type + ns.btn2_type + ns.url_light0 + ns.url_color + ns.url_white + ns.url_relay0 + ns.url_relay1 + ns.url_relay2 + ns.url_relay3}}
@@ -126,28 +126,23 @@ template:
         state: "{{'on' if trigger.to_state.state == '0.0' else 'off'}}"
         attributes:
           state_btn_type: >
-            {% set btn_type = state_attr('sensor.rest_btn_type', 'btn_type') %}
-            {% set button_type = state_attr('sensor.rest_btn_type', 'button_type') %}
-            {% set in_mode = state_attr('sensor.rest_btn_type', 'in_mode') %}
-            {% set btn1_type = state_attr('sensor.rest_btn_type', 'btn1_type') %}
-            {% set btn2_type = state_attr('sensor.rest_btn_type', 'btn2_type') %}
-            {% if btn_type != none %}
-              {% set type = btn_type  |  string %}
-            {% elif button_type != none %}
-              {% set type = button_type  |  string %}
-            {% elif in_mode != none %}
-              {% set type = in_mode  |  string %}
-            {% elif btn1_type != none %}
-              {% set type = btn1_type  |  string %}
-            {% elif btn2_type != none %}
-              {% set type = btn2_type  |  string %}
+            {% if state_attr('sensor.rest_btn_type', 'btn_type') != none %}
+              {% set type = state_attr('sensor.rest_btn_type', 'btn_type') | string %}
+            {% elif state_attr('sensor.rest_btn_type', 'button_type') != none %}
+              {% set type = state_attr('sensor.rest_btn_type', 'button_type') | string %}
+            {% elif state_attr('sensor.rest_btn_type', 'in_mode') != none %}
+              {% set type = state_attr('sensor.rest_btn_type', 'in_mode') | string %}
+            {% elif state_attr('sensor.rest_btn_type', 'btn1_type') != none %}
+              {% set type = state_attr('sensor.rest_btn_type', 'btn1_type') | string %}
+            {% elif state_attr('sensor.rest_btn_type', 'btn2_type') != none %}
+              {% set type = state_attr('sensor.rest_btn_type', 'btn2_type') | string %}
             {% else %}
               {% set type = 'unknown' %}
             {% endif %}
               {% if trigger.to_state.state == '0.0' %}
-            {{ states('sensor.rest_btn_type') | string + type }}
+            {{ states('sensor.rest_btn_type') | replace('detached', type) }}
             {% else %}
-            {{ this.attributes.state_btn_type | string + ', ' + states('sensor.rest_btn_type') | string + type }}
+            {{ this.attributes.state_btn_type + ', ' + states('sensor.rest_btn_type') | replace('detached', type) }}
             {%endif%}
 
 script:
@@ -162,14 +157,14 @@ script:
                 data:
                   message: Attenzione eseguire prima disabilita detached
                   title: Detached Shelly
-          - alias: serve solo per la prima volta caricato il file perchè script detached_off ancora non eseguito
+          - alias: Serve solo per la prima volta caricato il file perchè script detached_off ancora non eseguito
             conditions:
               - "{{ state_attr('script.detached_off', 'last_triggered') == none }}"
             sequence:
               - repeat:
                   count: 2
                   sequence:
-                    - alias: salva stato pulsante impostato sui device
+                    - alias: Salva stato pulsante impostato sui device
                       repeat:
                         count: "{{ state_attr('sensor.detached_list', 'btn_type') | count }}"
                         sequence:
@@ -180,18 +175,18 @@ script:
                               entity_id: input_number.rest_btn_index
                           - service: homeassistant.update_entity
                             entity_id: sensor.rest_btn_type
-              - alias: abilita detached a tutti i device shelly
+              - alias: Abilita detached a tutti i device shelly
                 repeat:
                   count: "{{ state_attr('sensor.detached_list', 'detached_on') | count }}"
                   sequence:
                     - service: rest_command.detached_shelly
                       data:
-                        urls: "{{ state_attr('sensor.detached_list', 'detached_on') [repeat.index-1] }}"
+                        urls: "{{ state_attr('sensor.detached_list', 'detached_on') [ repeat.index - 1 ] }}"
         default:
           - repeat:
               count: 2
               sequence:
-                - alias: salva stato pulsante impostato sui device
+                - alias: Salva stato pulsante impostato sui device
                   repeat:
                     count: "{{ state_attr('sensor.detached_list', 'btn_type') | count }}"
                     sequence:
@@ -202,13 +197,13 @@ script:
                           entity_id: input_number.rest_btn_index
                       - service: homeassistant.update_entity
                         entity_id: sensor.rest_btn_type
-          - alias: abilita detached a tutti i device shelly
+          - alias: Abilita detached a tutti i device shelly
             repeat:
               count: "{{ state_attr('sensor.detached_list', 'detached_on') | count }}"
               sequence:
                 - service: rest_command.detached_shelly
                   data:
-                    urls: "{{ state_attr('sensor.detached_list', 'detached_on') [repeat.index-1] }}"
+                    urls: "{{ state_attr('sensor.detached_list', 'detached_on') [ repeat.index - 1 ] }}"
 
   detached_off:
     alias: Disabilita detached
@@ -225,7 +220,7 @@ script:
                   sequence:
                     - service: rest_command.detached_shelly
                       data:
-                        urls: "{{ state_attr('sensor.btn_type_list', 'state_btn_type').split(', ') [repeat.index-1] }}"
+                        urls: "{{ state_attr('sensor.btn_type_list', 'state_btn_type').split(', ') [ repeat.index - 1 ] }}"
           - conditions:
               - "{{ this.attributes.last_triggered > state_attr('script.detached_on', 'last_triggered') }}"
             sequence:
@@ -239,4 +234,4 @@ script:
               sequence:
                 - service: rest_command.detached_shelly
                   data:
-                    urls: "{{ state_attr('sensor.btn_type_list', 'state_btn_type').split(', ') [repeat.index-1] }}"
+                    urls: "{{ state_attr('sensor.btn_type_list', 'state_btn_type').split(', ') [ repeat.index - 1 ] }}"
