--- a/packages/alarm/skill_device/cctv_alarm.yaml
+++ b/packages/alarm/skill_device/cctv_alarm.yaml
@@ -24,6 +24,8 @@ automation:
           {% from 'alarm.jinja' import state_alarm %}
           {% set alarm = (state_alarm() | from_json) ['alarm'] %}
           {{  is_state(alarm, 'triggered') }}
+        for: 
+          seconds: 20
       - platform: template
         value_template: >
           {% from 'alarm.jinja' import state_alarm %}
